src2/objects/Import_Batch_Detail__c.object
<CustomObject>
    <fields>
        <fullName>External_Reference__c</fullName>
        <label>External Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <label>External Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_PickUp__c</fullName>
        <label>Number PickUp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Import_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Import Batch</label>
        <referenceTo>Import_Batch__c</referenceTo>
        <relationshipLabel>Import Batch Details</relationshipLabel>
        <relationshipName>Import_Batch_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PickUp_Status__c</fullName>
        <label>PickUp Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Import Batch Details</relationshipLabel>
        <relationshipName>Import_Batch_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Import Batch Details</relationshipLabel>
        <relationshipName>Import_Batch_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales_Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00 - Ready</fullName>
                </value>
                <value>
                    <fullName>99 - Error</fullName>
                </value>
                <value>
                    <fullName>01 - Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Import Batch Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Batch Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>